--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -137,3 +137,5 @@ tconstruct:severing
 beyond_earth_giselle_addon:jei.category.extruding
 beyond_earth_giselle_addon:jei.category.fuel_loader
 beyond_earth_giselle_addon:jei.category.rolling
+quarryplus:jei_workbenchplus
+quarryplus:quarryplus.enchantmover
