--- a/config/alexsmobs.toml
+++ b/config/alexsmobs.toml
@@ -23,7 +23,7 @@
 	#Whether lava can be bottled with a right click of a glass bottle.
 	lavaBottleEnabled = true
 	#Whether bone serpents are neutral or hostile.
-	neutralBoneSerpents = false
+	neutralBoneSerpents = true
 	#Maximum world y-level that cave centipedes can spawn at
 	#Range: -64 ~ 320
 	caveCentipedeSpawnHeight = 0
@@ -145,10 +145,10 @@
 		crocSpawnRolls = 1
 		#Spawn Weight, added to a pool of other mobs for each biome. Higher number = higher chance of spawning. 0 = disable spawn
 		#Range: 0 ~ 1000
-		flySpawnWeight = 3
+		flySpawnWeight = 100
 		#Random roll chance to enable mob spawning. Higher number = lower chance of spawning
 		#Range: > 0
-		flySpawnRolls = 1
+		flySpawnRolls = 0
 		#Spawn Weight, added to a pool of other mobs for each biome. Higher number = higher chance of spawning. 0 = disable spawn
 		#Range: 0 ~ 1000
 		hummingbirdSpawnWeight = 19
