--- a/config/voicechat-client.toml
+++ b/config/voicechat-client.toml
@@ -31,11 +31,9 @@ microphone = ""
 #Empty for default device
 speaker = ""
 #If the microphone is muted (only when using voice activation)
-muted = true
+muted = false
 #If the voice chat is disabled (sound and microphone off)
 disabled = true
-#If the voice chat should use semi 3D stereo sound
-stereo = true
 #If the voice chat icons should be hidden
 hide_icons = true
 #If the group HUD should be visible
@@ -72,8 +70,6 @@ hud_icon_scale = 1.0
 recording_destination = ""
 #If noise cancellation should be enabled
 denoiser = false
-#If sound physics integration should be enabled
-soundphysics = true
 #If voice chat should work in singleplayer/LAN worlds
 run_local_server = true
 #Whether to use the Java implementation of microphone capturing instead of OpenAL
@@ -84,4 +80,7 @@ macos_microphone_workaround = false
 show_fake_players_disconnected = false
 #If the volume adjustment GUI should also show offline players
 offline_player_volume_adjustment = false
+#The 3D audio type
+#Allowed Values: NORMAL, REDUCED, OFF
+audio_type = "NORMAL"
 
