BOP biome cold desert disabled

--- a/config/biomesoplenty/biome_toggles.json
+++ b/config/biomesoplenty/biome_toggles.json
@@ -5,7 +5,7 @@
   "boreal_forest_enabled": true,
   "cherry_blossom_grove_enabled": true,
   "clover_patch_enabled": true,
-  "cold_desert_enabled": true,
+  "cold_desert_enabled": false,
   "coniferous_forest_enabled": true,
   "crag_enabled": true,
   "crystalline_chasm_enabled": true,
