--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -162,8 +162,6 @@
 
 	[building.glass_item_frame]
 		"Glass Item Frames Update Maps" = true
-		#The scale at which items render in the Glass Item Frame. To match the vanilla Item Frame size, set to 1.0
-		"Item Render Scale" = 1.5
 
 	[building.compressed_blocks]
 		"Charcoal Block and Blaze Lantern Stay On Fire Forever" = true
@@ -205,7 +203,6 @@
 	"Expanded Item Interactions" = true
 	"Easy Transfering" = true
 	"Chests In Boats" = true
-	"Quick Armor Swapping" = true
 
 	[management.item_sharing]
 		"Render Items In Chat" = true
@@ -224,9 +221,6 @@
 
 	[management.easy_transfering]
 		"Enable Shift Lock" = true
-
-	[management.quick_armor_swapping]
-		"Swap Off Hand" = true
 
 [tools]
 	Trowel = true
@@ -460,8 +454,6 @@
 		"Ignored Recipes" = []
 		"Force Limited Crafting" = false
 		"Disable Recipe Book" = false
-		#If enabled, advancements granting recipes will be stopped from loading, potentially reducing the lagspike on first world join.
-		"Filter Recipe Advancements" = true
 
 	[tweaks.skull_pikes]
 		"Pike Range" = 5.0
@@ -478,8 +470,6 @@
 	"Blossom Trees" = true
 	"Big Stone Clusters" = true
 	"Big Dungeon" = true
-	"Glimmering Weald" = true
-	"Azalea Wood" = true
 
 	[world.spiral_spires]
 		Rarity = 200
@@ -1354,7 +1344,6 @@
 	"Chest Searching" = true
 	"Back Button Keybind" = true
 	"Auto Walk Keybind" = true
-	"Soul Candles" = true
 
 	[client.variant_animal_textures]
 		"Enable Cow" = true
@@ -1445,7 +1434,7 @@
 	"Totem Of Holding" = true
 	Pipes = true
 	"Matrix Enchanting" = false
-	Magnets = true
+	Magnets = false
 	Crate = true
 	Backpack = false
 
