--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -139,3 +139,4 @@ beyond_earth_giselle_addon:jei.category.fuel_loader
 beyond_earth_giselle_addon:jei.category.rolling
 quarryplus:jei_workbenchplus
 quarryplus:quarryplus.enchantmover
+tetrapak:auto_salvage
