JEI config updated with new mod additions

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -87,3 +87,10 @@ Tool Belt
 Experience Obelisk
 Tetra Pak
 portabletanks
+Iron Jetpacks
+RFToolsBase
+RFToolsBuilder
+RFToolsDimensions
+RFToolsPower
+RFToolsStorage
+RFToolsUtility
