--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ usernamecache.json
 realms_persistence.json
 minecraftinstance.json
 config/patchouli-client-4.toml.bak
+config/xaerominimap_entities.json
