--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ realms_persistence.json
 minecraftinstance.json
 config/patchouli-client-4.toml.bak
 config/xaerominimap_entities.json
+resourcepacks/Cork - anti-tryphophobia resource pack 1.1.zip
