--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ minecraftinstance.json
 config/patchouli-client-4.toml.bak
 config/xaerominimap_entities.json
 resourcepacks/Cork - anti-tryphophobia resource pack 1.1.zip
+config/voicechat-client.toml
