--- a/config/apotheosis/enchantments.cfg
+++ b/config/apotheosis/enchantments.cfg
@@ -876,49 +876,23 @@
 
 
 "buddycards:buddy_boost" {
-    # If this enchantment is obtainable via loot and enchanting. [default: true]
     B:Discoverable=true
-
-    # The max level of this enchantment - originally 2. [range: 1 ~ 127, default: 6]
     I:"Max Level"=6
-
-    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
-
-    # A function to determine the min enchanting power. [default: ]
     S:"Min Power Function"=
-
-    # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: RARE]
     S:Rarity=RARE
-
-    # If this enchantment is obtainable via villager trades. [default: true]
     B:Tradeable=true
-
-    # If this enchantment is available via treasure (loot) sources. Ignored if not discoverable. [default: false]
     B:Treasure=false
 }
 
 
 "buddycards:extra_page" {
-    # If this enchantment is obtainable via loot and enchanting. [default: true]
     B:Discoverable=true
-
-    # The max level of this enchantment - originally 3. [range: 1 ~ 127, default: 6]
     I:"Max Level"=6
-
-    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
-
-    # A function to determine the min enchanting power. [default: ]
     S:"Min Power Function"=
-
-    # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: RARE]
     S:Rarity=RARE
-
-    # If this enchantment is obtainable via villager trades. [default: true]
     B:Tradeable=true
-
-    # If this enchantment is available via treasure (loot) sources. Ignored if not discoverable. [default: false]
     B:Treasure=false
 }
 
@@ -1787,6 +1761,54 @@
 }
 
 
+"domesticationinnovation:defusal" {
+    # If this enchantment is obtainable via loot and enchanting. [default: true]
+    B:Discoverable=true
+
+    # The max level of this enchantment - originally 3. [range: 1 ~ 127, default: 7]
+    I:"Max Level"=7
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+
+    # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: UNCOMMON]
+    S:Rarity=UNCOMMON
+
+    # If this enchantment is obtainable via villager trades. [default: true]
+    B:Tradeable=true
+
+    # If this enchantment is available via treasure (loot) sources. Ignored if not discoverable. [default: false]
+    B:Treasure=false
+}
+
+
+"domesticationinnovation:disc_jockey" {
+    # If this enchantment is obtainable via loot and enchanting. [default: true]
+    B:Discoverable=true
+
+    # The max level of this enchantment - originally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+
+    # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: RARE]
+    S:Rarity=RARE
+
+    # If this enchantment is obtainable via villager trades. [default: true]
+    B:Tradeable=true
+
+    # If this enchantment is available via treasure (loot) sources. Ignored if not discoverable. [default: false]
+    B:Treasure=false
+}
+
+
 "domesticationinnovation:fireproof" {
     # If this enchantment is obtainable via loot and enchanting. [default: true]
     B:Discoverable=true
@@ -2003,6 +2025,30 @@
 }
 
 
+"domesticationinnovation:ore_scenting" {
+    # If this enchantment is obtainable via loot and enchanting. [default: false]
+    B:Discoverable=false
+
+    # The max level of this enchantment - originally 3. [range: 1 ~ 127, default: 7]
+    I:"Max Level"=7
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+
+    # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: VERY_RARE]
+    S:Rarity=VERY_RARE
+
+    # If this enchantment is obtainable via villager trades. [default: false]
+    B:Tradeable=false
+
+    # If this enchantment is available via treasure (loot) sources. Ignored if not discoverable. [default: true]
+    B:Treasure=true
+}
+
+
 "domesticationinnovation:poison_resistance" {
     # If this enchantment is obtainable via loot and enchanting. [default: true]
     B:Discoverable=true
@@ -2018,6 +2064,30 @@
 
     # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: COMMON]
     S:Rarity=COMMON
+
+    # If this enchantment is obtainable via villager trades. [default: true]
+    B:Tradeable=true
+
+    # If this enchantment is available via treasure (loot) sources. Ignored if not discoverable. [default: false]
+    B:Treasure=false
+}
+
+
+"domesticationinnovation:shadow_hands" {
+    # If this enchantment is obtainable via loot and enchanting. [default: true]
+    B:Discoverable=true
+
+    # The max level of this enchantment - originally 4. [range: 1 ~ 127, default: 8]
+    I:"Max Level"=8
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+
+    # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: VERY_RARE]
+    S:Rarity=VERY_RARE
 
     # If this enchantment is obtainable via villager trades. [default: true]
     B:Tradeable=true
@@ -2144,6 +2214,30 @@
 
     # If this enchantment is available via treasure (loot) sources. Ignored if not discoverable. [default: true]
     B:Treasure=true
+}
+
+
+"domesticationinnovation:warping_bite" {
+    # If this enchantment is obtainable via loot and enchanting. [default: true]
+    B:Discoverable=true
+
+    # The max level of this enchantment - originally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+
+    # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: RARE]
+    S:Rarity=RARE
+
+    # If this enchantment is obtainable via villager trades. [default: true]
+    B:Tradeable=true
+
+    # If this enchantment is available via treasure (loot) sources. Ignored if not discoverable. [default: false]
+    B:Treasure=false
 }
 
 
