--- a/config/cgm-client.toml
+++ b/config/cgm-client.toml
@@ -11,6 +11,9 @@
 		playSoundWhenCritical = true
 		#The sound to play when a critical occurs
 		criticalSound = "minecraft:entity.player.attack.crit"
+		#The maximum distance impact sounds from bullet can be heard
+		#Range: 0.0 ~ 32.0
+		impactSoundDistance = 32.0
 
 	#Configuration for display related options
 	[client.display]
@@ -20,6 +23,24 @@
 		crosshair = "minecraft:default"
 		#If enabled, renders a cooldown indicator to make it easier to learn when you fire again.
 		cooldownIndicator = true
+		#If enabled, the weapon will sway when the player moves their look direction. This does not affect aiming and is only visual.
+		weaponSway = true
+		#The sensistivity of the visual weapon sway when the player moves their look direciton. The higher the value the more sway.
+		#Range: 0.0 ~ 1.0
+		swaySensitivity = 0.3
+		#The animation to use for sway. Directional follows the camera better while Drag is more immersive
+		#Allowed Values: DIRECTIONAL, DRAG
+		swayType = "DRAG"
+		#If enabled, the camera will roll when strafing while holding a gun. This creates a more immersive feeling.
+		cameraRollEffect = true
+		#When Camera Roll Effect is enabled, this is the absolute maximum angle the roll on the camera can approach.
+		#Range: 0.0 ~ 45.0
+		cameraRollAngle = 1.5
+		#Enables the sprinting animation on weapons for better immersion. This only applies to weapons that support a sprinting animation.
+		sprintingAnimation = true
+		#The intensity of the custom bobbing animation while holding a gun
+		#Range: 0.0 ~ 2.0
+		bobbingIntensity = 1.0
 
 	#Properties relating to particles
 	[client.particle]
@@ -34,15 +55,13 @@
 		bulletHoleFadeThreshold = 0.98
 		#If true, blood will will spawn from entities that are hit from a projectile
 		enableBlood = false
+		#The maximum distance impact particles can be seen from the player
+		#Range: 0.0 ~ 64.0
+		impactParticleDistance = 32.0
 
 	#Properties relating to controls
 	[client.controls]
 		#A value to multiple the mouse sensitivity by when aiming down weapon sights. Go to (Options > Controls > Mouse Settings > ADS Sensitivity) in game to change this!
 		#Range: 0.0 ~ 1.0
 		aimDownSightSensitivity = 0.75
-
-	#Experimental options
-	[client.experimental]
-		#Makes the camera and weapons move more naturally in first person view
-		immersiveCamera = false
 
