--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ config/patchouli-client-4.toml.bak
 config/xaerominimap_entities.json
 resourcepacks/Cork - anti-tryphophobia resource pack 1.1.zip
 config/voicechat-client.toml
+prettypipesprefs
