Enchantments list updated
Domestication innovation updated, so new enchantments exist in the apotheosis list

--- a/config/apotheosis/enchantments.cfg
+++ b/config/apotheosis/enchantments.cfg
@@ -1665,6 +1665,30 @@
 }
 
 
+"domesticationinnovation:blight_curse" {
+    # If this enchantment is obtainable via loot and enchanting. [default: true]
+    B:Discoverable=true
+
+    # The max level of this enchantment - originally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+
+    # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: VERY_RARE]
+    S:Rarity=VERY_RARE
+
+    # If this enchantment is obtainable via villager trades. [default: true]
+    B:Tradeable=true
+
+    # If this enchantment is available via treasure (loot) sources. Ignored if not discoverable. [default: false]
+    B:Treasure=false
+}
+
+
 "domesticationinnovation:bubbling" {
     # If this enchantment is obtainable via loot and enchanting. [default: false]
     B:Discoverable=false
@@ -1857,6 +1881,30 @@
 }
 
 
+"domesticationinnovation:gluttonous" {
+    # If this enchantment is obtainable via loot and enchanting. [default: true]
+    B:Discoverable=true
+
+    # The max level of this enchantment - originally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+
+    # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: COMMON]
+    S:Rarity=COMMON
+
+    # If this enchantment is obtainable via villager trades. [default: true]
+    B:Tradeable=true
+
+    # If this enchantment is available via treasure (loot) sources. Ignored if not discoverable. [default: false]
+    B:Treasure=false
+}
+
+
 "domesticationinnovation:health_boost" {
     # If this enchantment is obtainable via loot and enchanting. [default: true]
     B:Discoverable=true
@@ -1977,6 +2025,30 @@
 }
 
 
+"domesticationinnovation:intimidation" {
+    # If this enchantment is obtainable via loot and enchanting. [default: true]
+    B:Discoverable=true
+
+    # The max level of this enchantment - originally 2. [range: 1 ~ 127, default: 6]
+    I:"Max Level"=6
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+
+    # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: UNCOMMON]
+    S:Rarity=UNCOMMON
+
+    # If this enchantment is obtainable via villager trades. [default: true]
+    B:Tradeable=true
+
+    # If this enchantment is available via treasure (loot) sources. Ignored if not discoverable. [default: false]
+    B:Treasure=false
+}
+
+
 "domesticationinnovation:linked_inventory" {
     # If this enchantment is obtainable via loot and enchanting. [default: true]
     B:Discoverable=true
@@ -2064,6 +2136,30 @@
 
     # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: COMMON]
     S:Rarity=COMMON
+
+    # If this enchantment is obtainable via villager trades. [default: true]
+    B:Tradeable=true
+
+    # If this enchantment is available via treasure (loot) sources. Ignored if not discoverable. [default: false]
+    B:Treasure=false
+}
+
+
+"domesticationinnovation:psychic_wall" {
+    # If this enchantment is obtainable via loot and enchanting. [default: true]
+    B:Discoverable=true
+
+    # The max level of this enchantment - originally 3. [range: 1 ~ 127, default: 7]
+    I:"Max Level"=7
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+
+    # The rarity of this enchantment.  Valid values are COMMON, UNCOMMON, RARE, and VERY_RARE. [default: VERY_RARE]
+    S:Rarity=VERY_RARE
 
     # If this enchantment is obtainable via villager trades. [default: true]
     B:Tradeable=true
