--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ config/xaerominimap_entities.json
 resourcepacks/Cork - anti-tryphophobia resource pack 1.1.zip
 config/voicechat-client.toml
 prettypipesprefs
+config/jei-client.toml
