--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -55,7 +55,6 @@ IntegratedCrafting
 IntegratedTunnels
 Aquaculture 2
 Better Bundles
-Progressive Bosses
 rechiseled
 Dimensional Dungeons
 Just Another Mining Dimension
@@ -95,3 +94,4 @@ RFToolsPower
 RFToolsStorage
 RFToolsUtility
 Treasure Bags
+JAOPCA
