Leaf particles disabled
Disabled leaf particles from Quark cherry blossom trees, in concept its nice, but in practice the particles are rather ugly.

This can be re-enabled clientside if people really want it.

--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -745,7 +745,7 @@
 		"Teleport Duplication Chance" = 0.01
 
 	[world.blossom_trees]
-		"Drop Leaf Particles" = true
+		"Drop Leaf Particles" = false
 
 		[world.blossom_trees.blue]
 			Rarity = 200
