Misc. config updates

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -140,3 +140,4 @@ beyond_earth_giselle_addon:jei.category.rolling
 quarryplus:jei_workbenchplus
 quarryplus:quarryplus.enchantmover
 tetrapak:auto_salvage
+malum:spirit_repair
