--- a/config/malum-client.toml
+++ b/config/malum-client.toml
@@ -1,6 +1,7 @@
 
-#Graphics settings
 [graphics]
-	#Should particles render on the delayed buffer? This means they will properly render after clouds do, but could cause issues with mods like sodium.
-	buffer_particles = true
+
+	[graphics.particle]
+		#Should particles render on the delayed buffer? This means they will properly render after clouds do, but could cause issues with mods like sodium.
+		buffer_particles = true
 
