--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -134,10 +134,10 @@ tconstruct:modifiers
 tconstruct:molding
 tconstruct:part_builder
 tconstruct:severing
-beyond_earth_giselle_addon:jei.category.extruding
-beyond_earth_giselle_addon:jei.category.fuel_loader
-beyond_earth_giselle_addon:jei.category.rolling
 quarryplus:jei_workbenchplus
 quarryplus:quarryplus.enchantmover
 tetrapak:auto_salvage
 malum:spirit_repair
+beyond_earth_giselle_addon:extruding
+beyond_earth_giselle_addon:fuel_loader
+beyond_earth_giselle_addon:rolling
