--- a/config/malum-common.toml
+++ b/config/malum-common.toml
@@ -44,7 +44,7 @@
 		generateBrilliantStone = true
 
 	[worldgen.blazing_quartz]
-		#Amount of blaze quartz ore veins.
+		#Size of blaze quartz ore veins.
 		blazeQuartzSize = 14
 		#Should blaze quartz ore generate?
 		generateBlazeQuartz = true
